--- a/.github/workflows/deploy_github_pages.yml
+++ b/.github/workflows/deploy_github_pages.yml
@@ -32,12 +32,14 @@ jobs:
       - name: Move HTML5 templates into position
         run: |
           mkdir -v -p ~/.local/share/godot/templates
-          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
+          mv -f /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/ || true
+          ls -la /root/.local/share/godot/templates/
+          
       - name: Create staging directory
         run: mkdir -v -p build/web
 
       - name: Build
-        run: godot -v --export "HTML5" ../build/web/index.html project/project.godot
+        run: godot -v --export "HTML5" build/web/index.html project.godot
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
