--- a/.github/workflows/pages_deploy.yml
+++ b/.github/workflows/pages_deploy.yml
@@ -1,20 +1,39 @@
 name: Export Godot Web Build
 
 on:
-  workflow_dispatch: 
-    
+  workflow_dispatch:
+
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
 
-      - uses: vitorgus/setup-godot@v1
+      - name: Cache Godot
+        uses: actions/cache@v3
         with:
-          godot-version: 4.4.1
-          download-templates: true
-      
+          path: |
+            ~/.local/share/godot/**
+            /usr/local/bin/godot
+            ~/.config/godot/**
+          key: ubuntu22.04-godot-4.4.1
+
+      - name: Download and config Godot Engine headless linux server and templates
+        if: steps.cache-godot.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          wget -q https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_linux.x86_64.zip
+          wget -q https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_export_templates.tpz
+          mkdir ~/.cache
+          mkdir -p ~/.config/godot
+          mkdir -p ~/.local/share/godot/templates/4.4.1.stable
+          unzip Godot_v4.4.1-stable_linux.x86_64.zip
+          mv Godot_v4.4.1-stable_linux.x86_64 /usr/local/bin/godot
+          unzip Godot_v4.4.1-stable_export_templates.tpz
+          mv templates/* ~/.local/share/godot/templates/4.4.1.stable
+          rm -f Godot_v4.4.1-stable_linux.x86_64.zip Godot_v4.4.1-stable_export_templates.tpz
+
       - name: Export project to Web
         run: |
           mkdir -p docs
