--- a/.github/workflows/pages_deploy.yml
+++ b/.github/workflows/pages_deploy.yml
@@ -19,28 +19,17 @@ jobs:
             ~/.config/godot/**
           key: ubuntu22.04-godot-4.4.1
 
-      - name: Download and config Godot Engine headless linux server and templates
-        if: steps.cache-godot.outputs.cache-hit != 'true'
-        shell: bash
+      - name: Download Godot export templates
         run: |
-          wget -q https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_linux.x86_64.zip
-          wget -q https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_export_templates.tpz
-          mkdir ~/.cache
-          mkdir -p ~/.config/godot
-          mkdir -p ~/.local/share/godot/templates/4.4.1.stable
-          unzip Godot_v4.4.1-stable_linux.x86_64.zip
-          mv Godot_v4.4.1-stable_linux.x86_64 /usr/local/bin/godot
-          unzip Godot_v4.4.1-stable_export_templates.tpz
-          mv templates/* ~/.local/share/godot/templates/4.4.1.stable
-          rm -f Godot_v4.4.1-stable_linux.x86_64.zip Godot_v4.4.1-stable_export_templates.tpz
+          wget https://downloads.tuxfamily.org/godotengine/4.4.1/Godot_v4.4.1-stable_export_templates.tpz
+          mkdir -p ~/.local/share/godot/export_templates/4.4.1.stable
+          unzip Godot_v4.4.1-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/4.4.1.stable
 
       - name: Import Godot resources
         run: godot --headless --editor --quit --path .
-    
-      - name: Export project to Web
-        run: |
-          mkdir -p docs
-          godot --headless --export-release "Web" docs/index.html
+
+      - name: Export project
+        run: godot --headless --export-release "Web" ./build/index.html
 
       - name: Copy coi-serviceworker.js
         run: cp coi-serviceworker.js docs/
