--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -53,7 +53,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/Windows/windows.exe"
+export_path="bin/windows/Pathetic Hosting.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -78,7 +78,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="uid://b11hykl3dybch"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
@@ -120,7 +120,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/macOS/GameJam.dmg"
+export_path="bin/macOS/Pathetic Hosting.dmg"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -136,7 +136,7 @@ binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-application/icon=""
+application/icon="uid://b11hykl3dybch"
 application/icon_interpolation=4
 application/bundle_identifier="dev.hassa.hetznerGameJam25"
 application/signature=""
@@ -374,7 +374,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/linux_x86_64/linux.x86_64"
+export_path="bin/linux/Pathetic Hosting.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
